Render markdown with glamour

--- a/exercises/1-deploy-a-web-app.yaml
+++ b/exercises/1-deploy-a-web-app.yaml
@@ -4,8 +4,7 @@ description: Deploy a web application to a Linux environment
 content: |
   # Deploy A Web App
   
-  In this exercise you will deploy a web app to a Linux virtual machine running
-  on AWS. In doing so, you will learn how to
+  In this exercise you will deploy a web app to a Linux virtual machine running on AWS. In doing so, you will learn how to
   
   - start a web app and keep it running using Systemd
   - proxy traffic to the app using Nginx
@@ -13,6 +12,7 @@ content: |
   
   The final setup will look like this:
   
+  ```
                    ┌──────────────────────────────────────┐
                    │                                      │
                    │  ┌────────────────────────────────┐  │
@@ -28,7 +28,8 @@ content: |
                    │                                      │
                    │       Security Group (Firewall)      │
                    └──────────────────────────────────────┘
-  
+  ```
+
   ## 1. Deploy the app
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dolor elit, eleifend ut sagittis pulvinar, aliquet vitae lorem. Mauris fermentum tempus efficitur. Donec sit amet diam tincidunt diam luctus suscipit aliquam eu tellus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Praesent condimentum ex quis augue efficitur congue. Donec rhoncus ante in lorem congue, sed semper dui commodo. Cras leo sem, consectetur id nunc ac, fermentum faucibus justo. Aenean malesuada urna a risus volutpat, eu rhoncus dui euismod. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque id sollicitudin lorem. Aliquam quis tortor ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae faucibus risus.
   
