Add migration generator script

--- a/db/Makefile
+++ b/db/Makefile
@@ -1,2 +1,7 @@
-default:
+default: build
+
+build:
 	go build -o bin cmd/main.go
+
+migration:
+	touch "migrations/$(shell date +%Y%m%d%H%M%S)_placeholder.sql"
