--- a/db/Makefile
+++ b/db/Makefile
@@ -3,5 +3,8 @@ default: build
 build:
 	go build -o bin cmd/main.go
 
+test:
+	go test ./...
+
 migration:
 	touch "migrations/$(shell date +%Y%m%d%H%M%S)_placeholder.sql"
