Add additional make tasts

--- a/db/Makefile
+++ b/db/Makefile
@@ -6,5 +6,11 @@ build:
 test:
 	go test ./...
 
+init:
+	./bin/main init
+
+migrate:
+	./bin/main migrate
+
 migration:
 	touch "migrations/$(shell date +%Y%m%d%H%M%S)_placeholder.sql"
